Bug 145840 - UI Secure connection box reset incorrectly when opening&closing Edit Services dialog
Summary: UI Secure connection box reset incorrectly when opening&closing Edit Services...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.2.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.3.0 target:7.2.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-11-22 20:50 UTC by Gabor Kelemen (Collabora)
Modified: 2021-12-06 13:28 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
The connection dialog after opening the first time, box checked (58.66 KB, image/png)
2021-11-22 20:50 UTC, Gabor Kelemen (Collabora)
Details
The connection dialog after opening the second time, box cleared (58.35 KB, image/png)
2021-11-22 20:51 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2021-11-22 20:50:50 UTC
Created attachment 176431 [details]
The connection dialog after opening the first time, box checked

After adding a remote WebDAV service in the Remote Files dialog and opening the Edit service dialog the Secure connection box is turned off after pressing OK and reopening the dialog.

To reproduce:
1. Add a new WebDAV connection in the Remote Files dialog. I used a NextCloud server that uses https and port 443, so the Secure connection box should be checked.
2. In the top right dropdown menu select Edit service.
3. The File Services dialog shows up, it has the Secure connection box checked. Press OK.
4. In the top right dropdown menu select Edit service again.

The File Services dialog shows up, but now it has the Secure connection box unchecked.

As a consequence connecting to the remote server does not work anymore. Manually checking the Secure connection box fixes this.

In configuration the org.openoffice.Office.Common/Misc/FilePickerPlacesUrls keys value changes from https://... to http://...


This did work in 6.0, in 6.1 it started to crash after selecting the Edit service menu item and it's broken since 6.2.

Bibisected in linux-6.2 to:

https://git.libreoffice.org/core/+/f0a65dbba76359a2c6440329e1736a7eca24090c%5E%21/#F0

author	Caolán McNamara <caolanm@redhat.com>	Mon Sep 17 14:55:33 2018 +0100
committer	Caolán McNamara <caolanm@redhat.com>	Tue Sep 18 10:03:03 2018 +0200

crash editing previously added remote cmis

http://crashreport.libreoffice.org/stats/crash_details/61ba172a-ce27-46d7-8493-dc7cb688b10a

presumably since...

commit 767188fd1b1e1f504864f9489076283ebc413625

Adding CC to: Caolán McNamara
Comment 1 Gabor Kelemen (Collabora) 2021-11-22 20:51:34 UTC
Created attachment 176432 [details]
The connection dialog after opening the second time, box cleared
Comment 2 Caolán McNamara 2021-11-24 17:07:25 UTC
The change was probably wrt the set_active vs Check where Check presumably called the toggle handler back then
Comment 3 Commit Notification 2021-11-24 19:19:35 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/51c735d5109c487fcb876379a16f170c19a98f93

Resolves: tdf#145840 call ToggledDavsHdl on setting checkbox state

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2021-11-24 19:20:30 UTC
done in trunk, backport to 7-2 in gerrit
Comment 5 Commit Notification 2021-11-25 10:21:22 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/b23a16ff513369b6bf1f534a387d911b6336c9c8

Resolves: tdf#145840 call ToggledDavsHdl on setting checkbox state

It will be available in 7.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Christian Lohmaier 2021-12-06 13:28:48 UTC
7.2.4 was a hotfix release, updating target in status-whiteboard