Resolves: tdf#145840 call ToggledDavsHdl on setting checkbox state

Change-Id: Ia2a735255b94fd3a097081950e2145e07b4b3b63
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/125783
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>